--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,8 @@ plotly>=5.20.0
 numpy>=1.24.0
 scipy>=1.10.0
 xarray>=2023.1.0
-elevation>=1.1.3
+rioxarray>=0.15.0
+xarray>=2023.1.0
 rasterio>=1.3.9
+
+
