--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,4 @@
 streamlit>=1.30.0
 plotly>=5.20.0
 numpy>=1.24.0
-scipy>=1.10.0
-xarray>=2023.1.0
-rioxarray>=0.15.0
-xarray>=2023.1.0
-rasterio>=1.3.9
-
-
+requests>=2.31.0
